--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "4.3.95" !default;
+$mdi-version:          "4.4.95" !default;
 
 $mdi-icons: (
   "ab-testing": F001C,
@@ -52,6 +52,8 @@ $mdi-icons: (
   "account-heart-outline": FBBF,
   "account-key": F00B,
   "account-key-outline": FBC0,
+  "account-lock": F0189,
+  "account-lock-outline": F018A,
   "account-minus": F00D,
   "account-minus-outline": FAEB,
   "account-multiple": F00E,
@@ -80,6 +82,7 @@ $mdi-icons: (
   "account-star-outline": FBC4,
   "account-supervisor": FA8A,
   "account-supervisor-circle": FA8B,
+  "account-supervisor-outline": F0158,
   "account-switch": F019,
   "account-tie": FCBF,
   "account-tie-outline": F00F5,
@@ -359,6 +362,7 @@ $mdi-icons: (
   "arrow-expand-right": F797,
   "arrow-expand-up": F798,
   "arrow-expand-vertical": F84E,
+  "arrow-horizontal-lock": F0186,
   "arrow-left": F04D,
   "arrow-left-bold": F730,
   "arrow-left-bold-box": F731,
@@ -419,6 +423,7 @@ $mdi-icons: (
   "arrow-up-drop-circle": F062,
   "arrow-up-drop-circle-outline": F063,
   "arrow-up-thick": F05E,
+  "arrow-vertical-lock": F0187,
   "artist": F802,
   "artist-outline": FCC5,
   "artstation": FB37,
@@ -509,8 +514,10 @@ $mdi-icons: (
   "baseball": F851,
   "baseball-bat": F852,
   "basecamp": F075,
+  "bash": F01AE,
   "basket": F076,
   "basket-fill": F077,
+  "basket-outline": F01AC,
   "basket-unfill": F078,
   "basketball": F805,
   "basketball-hoop": FC17,
@@ -712,6 +719,12 @@ $mdi-icons: (
   "bottle-soda": F009B,
   "bottle-soda-classic": F009C,
   "bottle-soda-outline": F009D,
+  "bottle-tonic": F0159,
+  "bottle-tonic-outline": F015A,
+  "bottle-tonic-plus": F015B,
+  "bottle-tonic-plus-outline": F015C,
+  "bottle-tonic-skull": F015D,
+  "bottle-tonic-skull-outline": F015E,
   "bottle-wine": F853,
   "bow-tie": F677,
   "bowl": F617,
@@ -794,6 +807,8 @@ $mdi-icons: (
   "calendar-account": FEF4,
   "calendar-account-outline": FEF5,
   "calendar-alert": FA30,
+  "calendar-arrow-left": F015F,
+  "calendar-arrow-right": F0160,
   "calendar-blank": F0EE,
   "calendar-blank-multiple": F009E,
   "calendar-blank-outline": FB42,
@@ -955,6 +970,7 @@ $mdi-icons: (
   "cash-multiple": F116,
   "cash-refund": FA9B,
   "cash-register": FCD0,
+  "cash-usd": F01A1,
   "cash-usd-outline": F117,
   "cassette": F9D3,
   "cast": F118,
@@ -992,6 +1008,7 @@ $mdi-icons: (
   "celtic-cross": FCD1,
   "centos": F0145,
   "certificate": F124,
+  "certificate-outline": F01B3,
   "chair-rolling": FFBA,
   "chair-school": F125,
   "charity": FC2B,
@@ -1097,6 +1114,7 @@ $mdi-icons: (
   "christianity": F952,
   "christianity-outline": FCD2,
   "church": F144,
+  "cigar": F01B4,
   "circle": F764,
   "circle-double": FEB2,
   "circle-edit-outline": F8D4,
@@ -1220,6 +1238,7 @@ $mdi-icons: (
   "coffee-to-go": F177,
   "coffin": FB5B,
   "cogs": F8D5,
+  "coin": F0196,
   "coin-outline": F178,
   "coins": F694,
   "collage": F640,
@@ -1351,6 +1370,7 @@ $mdi-icons: (
   "crosshairs": F1A3,
   "crosshairs-gps": F1A4,
   "crosshairs-off": FF62,
+  "crosshairs-question": F0161,
   "crown": F1A5,
   "cryengine": F958,
   "crystal-ball": FB14,
@@ -1463,18 +1483,31 @@ $mdi-icons: (
   "diamond-outline": FB67,
   "diamond-stone": F1C8,
   "dice-1": F1CA,
+  "dice-1-outline": F0175,
   "dice-2": F1CB,
+  "dice-2-outline": F0176,
   "dice-3": F1CC,
+  "dice-3-outline": F0177,
   "dice-4": F1CD,
+  "dice-4-outline": F0178,
   "dice-5": F1CE,
+  "dice-5-outline": F0179,
   "dice-6": F1CF,
+  "dice-6-outline": F017A,
+  "dice-d10": F017E,
   "dice-d10-outline": F76E,
+  "dice-d12": F017F,
   "dice-d12-outline": F866,
+  "dice-d20": F0180,
   "dice-d20-outline": F5EA,
+  "dice-d4": F017B,
   "dice-d4-outline": F5EB,
+  "dice-d6": F017C,
   "dice-d6-outline": F5EC,
+  "dice-d8": F017D,
   "dice-d8-outline": F5ED,
   "dice-multiple": F76D,
+  "dice-multiple-outline": F0181,
   "dictionary": F61D,
   "dip-switch": F7C0,
   "directions": F1D0,
@@ -1725,6 +1758,8 @@ $mdi-icons: (
   "file-cad-box": FF09,
   "file-cancel": FDA2,
   "file-cancel-outline": FDA3,
+  "file-certificate": F01B1,
+  "file-certificate-outline": F01B2,
   "file-chart": F215,
   "file-chart-outline": F004B,
   "file-check": F216,
@@ -1771,6 +1806,10 @@ $mdi-icons: (
   "file-image-outline": FECD,
   "file-import": F220,
   "file-import-outline": F0051,
+  "file-key": F01AF,
+  "file-key-outline": F01B0,
+  "file-link": F01A2,
+  "file-link-outline": F01A3,
   "file-lock": F221,
   "file-lock-outline": F0052,
   "file-move": FAB8,
@@ -1786,6 +1825,8 @@ $mdi-icons: (
   "file-pdf-outline": FE7D,
   "file-percent": F81D,
   "file-percent-outline": F0055,
+  "file-phone": F01A4,
+  "file-phone-outline": F01A5,
   "file-plus": F751,
   "file-plus-outline": FF0A,
   "file-powerpoint": F227,
@@ -1853,6 +1894,9 @@ $mdi-icons: (
   "fingerprint-off": FECE,
   "fire": F238,
   "fire-extinguisher": FF0F,
+  "fire-hydrant": F0162,
+  "fire-hydrant-alert": F0163,
+  "fire-hydrant-off": F0164,
   "fire-truck": F8AA,
   "firebase": F966,
   "firefox": F239,
@@ -2136,9 +2180,11 @@ $mdi-icons: (
   "gas-station-outline": FED5,
   "gate": F299,
   "gate-and": F8E0,
+  "gate-arrow-right": F0194,
   "gate-nand": F8E1,
   "gate-nor": F8E2,
   "gate-not": F8E3,
+  "gate-open": F0195,
   "gate-or": F8E4,
   "gate-xnor": F8E5,
   "gate-xor": F8E6,
@@ -2151,6 +2197,8 @@ $mdi-icons: (
   "gender-female": F29C,
   "gender-male": F29D,
   "gender-male-female": F29E,
+  "gender-male-female-variant": F016A,
+  "gender-non-binary": F016B,
   "gender-transgender": F29F,
   "gentoo": F8E7,
   "gesture": F7CA,
@@ -2244,6 +2292,7 @@ $mdi-icons: (
   "grid-large": F757,
   "grid-off": F2C2,
   "grill": FE86,
+  "grill-outline": F01B5,
   "group": F2C3,
   "guitar-acoustic": F770,
   "guitar-electric": F2C4,
@@ -2270,6 +2319,7 @@ $mdi-icons: (
   "hand-right": FE88,
   "hand-saw": FE89,
   "handball": FF70,
+  "handcuffs": F0169,
   "hanger": F2C8,
   "hard-hat": F96E,
   "harddisk": F2CA,
@@ -2344,6 +2394,8 @@ $mdi-icons: (
   "home-city": FCF1,
   "home-city-outline": FCF2,
   "home-currency-usd": F8AE,
+  "home-edit": F0184,
+  "home-edit-outline": F0185,
   "home-export-outline": FFB8,
   "home-flood": FF17,
   "home-floor-0": FDAE,
@@ -2490,10 +2542,12 @@ $mdi-icons: (
   "kettle-outline": FF73,
   "key": F306,
   "key-change": F307,
+  "key-link": F01CA,
   "key-minus": F308,
   "key-outline": FDB2,
   "key-plus": F309,
   "key-remove": F30A,
+  "key-star": F01C9,
   "key-variant": F30B,
   "key-wireless": FFE2,
   "keyboard": F30C,
@@ -2579,6 +2633,7 @@ $mdi-icons: (
   "led-variant-off": F32E,
   "led-variant-on": F32F,
   "led-variant-outline": F330,
+  "leek": F01A8,
   "less-than": F97B,
   "less-than-or-equal": F97C,
   "library": F331,
@@ -2719,6 +2774,7 @@ $mdi-icons: (
   "maxcdn": F359,
   "medal": F986,
   "medical-bag": F6EE,
+  "meditation": F01A6,
   "medium": F35A,
   "meetup": FAD2,
   "memory": F35B,
@@ -2742,17 +2798,27 @@ $mdi-icons: (
   "message-bulleted-off": F6A2,
   "message-draw": F363,
   "message-image": F364,
+  "message-image-outline": F0197,
   "message-lock": FFEC,
+  "message-lock-outline": F0198,
+  "message-minus": F0199,
+  "message-minus-outline": F019A,
   "message-outline": F365,
   "message-plus": F653,
   "message-plus-outline": F00E6,
   "message-processing": F366,
+  "message-processing-outline": F019B,
   "message-reply": F367,
   "message-reply-text": F368,
   "message-settings": F6EF,
+  "message-settings-outline": F019C,
   "message-settings-variant": F6F0,
+  "message-settings-variant-outline": F019D,
   "message-text": F369,
+  "message-text-clock": F019E,
+  "message-text-clock-outline": F019F,
   "message-text-lock": FFED,
+  "message-text-lock-outline": F01A0,
   "message-text-outline": F36A,
   "message-video": F36B,
   "meteor": F629,
@@ -2781,6 +2847,8 @@ $mdi-icons: (
   "minidisc": FA05,
   "minus": F374,
   "minus-box": F375,
+  "minus-box-multiple": F016C,
+  "minus-box-multiple-outline": F016D,
   "minus-box-outline": F6F1,
   "minus-circle": F376,
   "minus-circle-outline": F377,
@@ -2917,6 +2985,7 @@ $mdi-icons: (
   "nintendo-switch": F7E0,
   "nix": F0130,
   "nodejs": F399,
+  "noodles": F01A9,
   "not-equal": F98C,
   "not-equal-variant": F98D,
   "note": F39A,
@@ -3026,6 +3095,7 @@ $mdi-icons: (
   "nuxt": F0131,
   "oar": F67B,
   "ocarina": FDBC,
+  "ocr": F0165,
   "octagon": F3C3,
   "octagon-outline": F3C4,
   "octagram": F6F8,
@@ -3098,6 +3168,8 @@ $mdi-icons: (
   "panorama-vertical": F3DF,
   "panorama-wide-angle": F3E0,
   "paper-cut-vertical": F3E1,
+  "paper-roll": F0182,
+  "paper-roll-outline": F0183,
   "paperclip": F3E2,
   "parachute": FC90,
   "parachute-outline": FC91,
@@ -3105,6 +3177,7 @@ $mdi-icons: (
   "party-popper": F0078,
   "passport": F7E2,
   "passport-biometric": FDBD,
+  "pasta": F018B,
   "patio-heater": FF9D,
   "patreon": F881,
   "pause": F3E4,
@@ -3129,6 +3202,8 @@ $mdi-icons: (
   "pen-remove": FDC2,
   "pencil": F3EB,
   "pencil-box": F3EC,
+  "pencil-box-multiple": F016F,
+  "pencil-box-multiple-outline": F0170,
   "pencil-box-outline": F3ED,
   "pencil-circle": F6FE,
   "pencil-circle-outline": F775,
@@ -3161,6 +3236,7 @@ $mdi-icons: (
   "phone-forward": F3F4,
   "phone-hangup": F3F5,
   "phone-in-talk": F3F6,
+  "phone-in-talk-outline": F01AD,
   "phone-incoming": F3F7,
   "phone-lock": F3F8,
   "phone-log": F3F9,
@@ -3233,6 +3309,7 @@ $mdi-icons: (
   "plus": F415,
   "plus-box": F416,
   "plus-box-multiple": F334,
+  "plus-box-multiple-outline": F016E,
   "plus-box-outline": F703,
   "plus-circle": F417,
   "plus-circle-multiple-outline": F418,
@@ -3254,6 +3331,8 @@ $mdi-icons: (
   "pokemon-go": FA08,
   "poker-chip": F82F,
   "polaroid": F41E,
+  "police-badge": F0192,
+  "police-badge-outline": F0193,
   "poll": F41F,
   "poll-box": F420,
   "polymer": F421,
@@ -3266,6 +3345,7 @@ $mdi-icons: (
   "pot-mix": F65B,
   "pound": F423,
   "pound-box": F424,
+  "pound-box-outline": F01AA,
   "power": F425,
   "power-cycle": F900,
   "power-off": F901,
@@ -3292,6 +3372,7 @@ $mdi-icons: (
   "printer-3d-nozzle": FE3E,
   "printer-3d-nozzle-outline": FE3F,
   "printer-alert": F42C,
+  "printer-check": F0171,
   "printer-off": FE40,
   "printer-pos": F0079,
   "printer-settings": F706,
@@ -3320,6 +3401,9 @@ $mdi-icons: (
   "qqchat": F605,
   "qrcode": F432,
   "qrcode-edit": F8B7,
+  "qrcode-minus": F01B7,
+  "qrcode-plus": F01B6,
+  "qrcode-remove": F01B8,
   "qrcode-scan": F433,
   "quadcopter": F434,
   "quality-high": F435,
@@ -3485,6 +3569,7 @@ $mdi-icons: (
   "scatter-plot": FEE6,
   "scatter-plot-outline": FEE7,
   "school": F474,
+  "school-outline": F01AB,
   "scissors-cutting": FA6A,
   "screen-rotation": F475,
   "screen-rotation-lock": F476,
@@ -3533,9 +3618,15 @@ $mdi-icons: (
   "selection-ellipse-arrow-inside": FF3F,
   "selection-off": F776,
   "send": F48A,
+  "send-check": F018C,
+  "send-check-outline": F018D,
   "send-circle": FE58,
   "send-circle-outline": FE59,
+  "send-clock": F018E,
+  "send-clock-outline": F018F,
   "send-lock": F7EC,
+  "send-lock-outline": F0191,
+  "send-outline": F0190,
   "serial-port": F65C,
   "server": F48B,
   "server-minus": F48C,
@@ -3604,6 +3695,8 @@ $mdi-icons: (
   "shield-remove": FADB,
   "shield-remove-outline": FADC,
   "shield-search": FD76,
+  "shield-star": F0166,
+  "shield-star-outline": F0167,
   "shield-sun": F007F,
   "shield-sun-outline": F0080,
   "ship-wheel": F832,
@@ -3715,12 +3808,15 @@ $mdi-icons: (
   "solid": F68C,
   "sort": F4BA,
   "sort-alphabetical": F4BB,
+  "sort-alphabetical-ascending": F0173,
+  "sort-alphabetical-descending": F0174,
   "sort-ascending": F4BC,
   "sort-descending": F4BD,
   "sort-numeric": F4BE,
   "sort-variant": F4BF,
   "sort-variant-lock": FCA9,
   "sort-variant-lock-open": FCAA,
+  "sort-variant-remove": F0172,
   "soundcloud": F4C0,
   "source-branch": F62C,
   "source-commit": F717,
@@ -3928,6 +4024,7 @@ $mdi-icons: (
   "test-tube-empty": F910,
   "test-tube-off": F911,
   "text": F9A7,
+  "text-recognition": F0168,
   "text-shadow": F669,
   "text-short": F9A8,
   "text-subject": F9A9,
@@ -4007,6 +4104,7 @@ $mdi-icons: (
   "tooth": F8C2,
   "tooth-outline": F529,
   "toothbrush": F0154,
+  "toothbrush-electric": F0157,
   "toothbrush-paste": F0155,
   "tor": F52A,
   "tortoise": FD17,
@@ -4301,6 +4399,7 @@ $mdi-icons: (
   "weight": F5A1,
   "weight-gram": FD1B,
   "weight-kilogram": F5A2,
+  "weight-lifter": F0188,
   "weight-pound": F9B4,
   "whatsapp": F5A3,
   "wheelchair-accessibility": F5A4,
@@ -4380,6 +4479,7 @@ $mdi-icons: (
   "yeast": F5C1,
   "yelp": F5C2,
   "yin-yang": F67F,
+  "yoga": F01A7,
   "youtube": F5C3,
   "youtube-creator-studio": F846,
   "youtube-gaming": F847,
