--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=4.4.95");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=4.4.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=4.4.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=4.4.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=4.4.95") format("truetype");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=4.5.95");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=4.5.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=4.5.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=4.5.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=4.5.95") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -470,6 +470,14 @@
   content: "\F028";
 }
 
+.mdi-alert-circle-check::before {
+  content: "\F0218";
+}
+
+.mdi-alert-circle-check-outline::before {
+  content: "\F0219";
+}
+
 .mdi-alert-circle-outline::before {
   content: "\F5D6";
 }
@@ -502,12 +510,44 @@
   content: "\F02A";
 }
 
+.mdi-alert-rhombus::before {
+  content: "\F01F9";
+}
+
+.mdi-alert-rhombus-outline::before {
+  content: "\F01FA";
+}
+
 .mdi-alien::before {
   content: "\F899";
 }
 
 .mdi-alien-outline::before {
   content: "\F00F6";
+}
+
+.mdi-align-horizontal-center::before {
+  content: "\F01EE";
+}
+
+.mdi-align-horizontal-left::before {
+  content: "\F01ED";
+}
+
+.mdi-align-horizontal-right::before {
+  content: "\F01EF";
+}
+
+.mdi-align-vertical-bottom::before {
+  content: "\F01F0";
+}
+
+.mdi-align-vertical-center::before {
+  content: "\F01F1";
+}
+
+.mdi-align-vertical-top::before {
+  content: "\F01F2";
 }
 
 .mdi-all-inclusive::before {
@@ -1084,6 +1124,10 @@
 
 .mdi-amplifier::before {
   content: "\F030";
+}
+
+.mdi-amplifier-off::before {
+  content: "\F01E0";
 }
 
 .mdi-anchor::before {
@@ -1732,6 +1776,10 @@
 
 .mdi-audio-video::before {
   content: "\F93C";
+}
+
+.mdi-audio-video-off::before {
+  content: "\F01E1";
 }
 
 .mdi-audiobook::before {
@@ -2388,6 +2436,14 @@
 
 .mdi-bell-alert-outline::before {
   content: "\FE9E";
+}
+
+.mdi-bell-check::before {
+  content: "\F0210";
+}
+
+.mdi-bell-check-outline::before {
+  content: "\F0211";
 }
 
 .mdi-bell-circle::before {
@@ -3626,6 +3682,10 @@
   content: "\F7A8";
 }
 
+.mdi-car-info::before {
+  content: "\F01E9";
+}
+
 .mdi-car-key::before {
   content: "\FB49";
 }
@@ -4108,6 +4168,14 @@
 
 .mdi-chart-scatter-plot-hexbin::before {
   content: "\F66D";
+}
+
+.mdi-chart-snakey::before {
+  content: "\F020A";
+}
+
+.mdi-chart-snakey-variant::before {
+  content: "\F020B";
 }
 
 .mdi-chart-timeline::before {
@@ -4782,6 +4850,14 @@
   content: "\FB59";
 }
 
+.mdi-cloud-lock::before {
+  content: "\F021C";
+}
+
+.mdi-cloud-lock-outline::before {
+  content: "\F021D";
+}
+
 .mdi-cloud-off-outline::before {
   content: "\F164";
 }
@@ -4934,6 +5010,14 @@
   content: "\FB5B";
 }
 
+.mdi-cog-clockwise::before {
+  content: "\F0208";
+}
+
+.mdi-cog-counterclockwise::before {
+  content: "\F0209";
+}
+
 .mdi-cogs::before {
   content: "\F8D5";
 }
@@ -5028,6 +5112,10 @@
 
 .mdi-comment-check-outline::before {
   content: "\F180";
+}
+
+.mdi-comment-edit::before {
+  content: "\F01EA";
 }
 
 .mdi-comment-eye::before {
@@ -5472,6 +5560,10 @@
 
 .mdi-crown::before {
   content: "\F1A5";
+}
+
+.mdi-crown-outline::before {
+  content: "\F01FB";
 }
 
 .mdi-cryengine::before {
@@ -6054,12 +6146,44 @@
   content: "\FAAB";
 }
 
+.mdi-dishwasher-alert::before {
+  content: "\F01E3";
+}
+
+.mdi-dishwasher-off::before {
+  content: "\F01E4";
+}
+
 .mdi-disqus::before {
   content: "\F1D2";
 }
 
 .mdi-disqus-outline::before {
   content: "\F1D3";
+}
+
+.mdi-distribute-horizontal-center::before {
+  content: "\F01F4";
+}
+
+.mdi-distribute-horizontal-left::before {
+  content: "\F01F3";
+}
+
+.mdi-distribute-horizontal-right::before {
+  content: "\F01F5";
+}
+
+.mdi-distribute-vertical-bottom::before {
+  content: "\F01F6";
+}
+
+.mdi-distribute-vertical-center::before {
+  content: "\F01F7";
+}
+
+.mdi-distribute-vertical-top::before {
+  content: "\F01F8";
 }
 
 .mdi-diving-flippers::before {
@@ -7148,6 +7272,14 @@
 
 .mdi-file-download-outline::before {
   content: "\F965";
+}
+
+.mdi-file-edit::before {
+  content: "\F0212";
+}
+
+.mdi-file-edit-outline::before {
+  content: "\F0213";
 }
 
 .mdi-file-excel::before {
@@ -8338,8 +8470,16 @@
   content: "\F27E";
 }
 
+.mdi-format-quote-close-outline::before {
+  content: "\F01D3";
+}
+
 .mdi-format-quote-open::before {
   content: "\F756";
+}
+
+.mdi-format-quote-open-outline::before {
+  content: "\F01D2";
 }
 
 .mdi-format-rotate-90::before {
@@ -8510,8 +8650,24 @@
   content: "\F290";
 }
 
+.mdi-fridge-alert::before {
+  content: "\F01DC";
+}
+
+.mdi-fridge-alert-outline::before {
+  content: "\F01DD";
+}
+
 .mdi-fridge-bottom::before {
   content: "\F292";
+}
+
+.mdi-fridge-off::before {
+  content: "\F01DA";
+}
+
+.mdi-fridge-off-outline::before {
+  content: "\F01DB";
 }
 
 .mdi-fridge-outline::before {
@@ -8952,6 +9108,10 @@
 
 .mdi-golf::before {
   content: "\F822";
+}
+
+.mdi-golf-cart::before {
+  content: "\F01CF";
 }
 
 .mdi-golf-tee::before {
@@ -9898,6 +10058,14 @@
   content: "\F2EE";
 }
 
+.mdi-image-edit::before {
+  content: "\F020E";
+}
+
+.mdi-image-edit-outline::before {
+  content: "\F020F";
+}
+
 .mdi-image-filter::before {
   content: "\F2EF";
 }
@@ -9960,6 +10128,10 @@
 
 .mdi-image-off::before {
   content: "\F82A";
+}
+
+.mdi-image-off-outline::before {
+  content: "\F01FC";
 }
 
 .mdi-image-outline::before {
@@ -11586,6 +11758,14 @@
   content: "\F7DD";
 }
 
+.mdi-movie-search::before {
+  content: "\F01FD";
+}
+
+.mdi-movie-search-outline::before {
+  content: "\F01FE";
+}
+
 .mdi-muffin::before {
   content: "\F98B";
 }
@@ -11964,6 +12144,10 @@
 
 .mdi-note-text::before {
   content: "\F39E";
+}
+
+.mdi-note-text-outline::before {
+  content: "\F0202";
 }
 
 .mdi-notebook::before {
@@ -12906,12 +13090,32 @@
   content: "\FF37";
 }
 
+.mdi-phone-alert-outline::before {
+  content: "\F01B9";
+}
+
 .mdi-phone-bluetooth::before {
   content: "\F3F3";
 }
 
+.mdi-phone-bluetooth-outline::before {
+  content: "\F01BA";
+}
+
 .mdi-phone-cancel::before {
   content: "\F00E7";
+}
+
+.mdi-phone-cancel-outline::before {
+  content: "\F01BB";
+}
+
+.mdi-phone-check::before {
+  content: "\F01D4";
+}
+
+.mdi-phone-check-outline::before {
+  content: "\F01D5";
 }
 
 .mdi-phone-classic::before {
@@ -12922,8 +13126,16 @@
   content: "\F3F4";
 }
 
+.mdi-phone-forward-outline::before {
+  content: "\F01BC";
+}
+
 .mdi-phone-hangup::before {
   content: "\F3F5";
+}
+
+.mdi-phone-hangup-outline::before {
+  content: "\F01BD";
 }
 
 .mdi-phone-in-talk::before {
@@ -12938,28 +13150,64 @@
   content: "\F3F7";
 }
 
+.mdi-phone-incoming-outline::before {
+  content: "\F01BE";
+}
+
 .mdi-phone-lock::before {
   content: "\F3F8";
+}
+
+.mdi-phone-lock-outline::before {
+  content: "\F01BF";
 }
 
 .mdi-phone-log::before {
   content: "\F3F9";
 }
 
+.mdi-phone-log-outline::before {
+  content: "\F01C0";
+}
+
+.mdi-phone-message::before {
+  content: "\F01C1";
+}
+
+.mdi-phone-message-outline::before {
+  content: "\F01C2";
+}
+
 .mdi-phone-minus::before {
   content: "\F658";
+}
+
+.mdi-phone-minus-outline::before {
+  content: "\F01C3";
 }
 
 .mdi-phone-missed::before {
   content: "\F3FA";
 }
 
+.mdi-phone-missed-outline::before {
+  content: "\F01D0";
+}
+
 .mdi-phone-off::before {
   content: "\FDCB";
 }
 
+.mdi-phone-off-outline::before {
+  content: "\F01D1";
+}
+
 .mdi-phone-outgoing::before {
   content: "\F3FB";
+}
+
+.mdi-phone-outgoing-outline::before {
+  content: "\F01C4";
 }
 
 .mdi-phone-outline::before {
@@ -12970,12 +13218,32 @@
   content: "\F3FC";
 }
 
+.mdi-phone-paused-outline::before {
+  content: "\F01C5";
+}
+
 .mdi-phone-plus::before {
   content: "\F659";
 }
 
+.mdi-phone-plus-outline::before {
+  content: "\F01C6";
+}
+
 .mdi-phone-return::before {
   content: "\F82E";
+}
+
+.mdi-phone-return-outline::before {
+  content: "\F01C7";
+}
+
+.mdi-phone-ring::before {
+  content: "\F01D6";
+}
+
+.mdi-phone-ring-outline::before {
+  content: "\F01D7";
 }
 
 .mdi-phone-rotate-landscape::before {
@@ -12988,6 +13256,10 @@
 
 .mdi-phone-settings::before {
   content: "\F3FD";
+}
+
+.mdi-phone-settings-outline::before {
+  content: "\F01C8";
 }
 
 .mdi-phone-voip::before {
@@ -13266,6 +13538,10 @@
   content: "\F704";
 }
 
+.mdi-plus-thick::before {
+  content: "\F0217";
+}
+
 .mdi-pocket::before {
   content: "\F41C";
 }
@@ -13464,6 +13740,14 @@
 
 .mdi-printer-3d-nozzle::before {
   content: "\FE3E";
+}
+
+.mdi-printer-3d-nozzle-alert::before {
+  content: "\F01EB";
+}
+
+.mdi-printer-3d-nozzle-alert-outline::before {
+  content: "\F01EC";
 }
 
 .mdi-printer-3d-nozzle-outline::before {
@@ -13890,6 +14174,10 @@
   content: "\FF3C";
 }
 
+.mdi-reply-circle::before {
+  content: "\F01D9";
+}
+
 .mdi-reply-outline::before {
   content: "\FF3D";
 }
@@ -14006,6 +14294,10 @@
   content: "\FB21";
 }
 
+.mdi-robot-mower-outline::before {
+  content: "\F021E";
+}
+
 .mdi-robot-vacuum::before {
   content: "\F70C";
 }
@@ -14110,6 +14402,10 @@
   content: "\F607";
 }
 
+.mdi-router::before {
+  content: "\F020D";
+}
+
 .mdi-router-wireless::before {
   content: "\F469";
 }
@@ -14168,6 +14464,10 @@
 
 .mdi-run-fast::before {
   content: "\F46E";
+}
+
+.mdi-rv-truck::before {
+  content: "\F01FF";
 }
 
 .mdi-sack::before {
@@ -14268,6 +14568,10 @@
 
 .mdi-scissors-cutting::before {
   content: "\FA6A";
+}
+
+.mdi-scooter::before {
+  content: "\F0214";
 }
 
 .mdi-screen-rotation::before {
@@ -14630,6 +14934,10 @@
   content: "\F496";
 }
 
+.mdi-share-circle::before {
+  content: "\F01D8";
+}
+
 .mdi-share-off::before {
   content: "\FF40";
 }
@@ -14698,6 +15006,14 @@
   content: "\FCA6";
 }
 
+.mdi-shield-edit::before {
+  content: "\F01CB";
+}
+
+.mdi-shield-edit-outline::before {
+  content: "\F01CC";
+}
+
 .mdi-shield-half-full::before {
   content: "\F77F";
 }
@@ -14754,6 +15070,14 @@
   content: "\FADA";
 }
 
+.mdi-shield-refresh::before {
+  content: "\F01CD";
+}
+
+.mdi-shield-refresh-outline::before {
+  content: "\F01CE";
+}
+
 .mdi-shield-remove::before {
   content: "\FADB";
 }
@@ -14808,6 +15132,10 @@
 
 .mdi-shopping-music::before {
   content: "\F49B";
+}
+
+.mdi-shopping-outline::before {
+  content: "\F0200";
 }
 
 .mdi-shopping-search::before {
@@ -15366,6 +15694,14 @@
   content: "\F4C6";
 }
 
+.mdi-spider::before {
+  content: "\F0215";
+}
+
+.mdi-spider-thread::before {
+  content: "\F0216";
+}
+
 .mdi-spider-web::before {
   content: "\FBA6";
 }
@@ -15534,6 +15870,10 @@
   content: "\FAE4";
 }
 
+.mdi-state-machine::before {
+  content: "\F021A";
+}
+
 .mdi-steam::before {
   content: "\F4D3";
 }
@@ -15612,6 +15952,10 @@
 
 .mdi-stove::before {
   content: "\F4DE";
+}
+
+.mdi-strategy::before {
+  content: "\F0201";
 }
 
 .mdi-strava::before {
@@ -16314,6 +16658,10 @@
   content: "\F0085";
 }
 
+.mdi-toaster-off::before {
+  content: "\F01E2";
+}
+
 .mdi-toaster-oven::before {
   content: "\FCAF";
 }
@@ -16658,6 +17006,14 @@
   content: "\F916";
 }
 
+.mdi-tumble-dryer-alert::before {
+  content: "\F01E5";
+}
+
+.mdi-tumble-dryer-off::before {
+  content: "\F01E6";
+}
+
 .mdi-tumblr::before {
   content: "\F541";
 }
@@ -16838,6 +17194,10 @@
   content: "\F553";
 }
 
+.mdi-usb-port::before {
+  content: "\F021B";
+}
+
 .mdi-valve::before {
   content: "\F0088";
 }
@@ -16860,6 +17220,10 @@
 
 .mdi-vanish::before {
   content: "\F7FB";
+}
+
+.mdi-vanity-light::before {
+  content: "\F020C";
 }
 
 .mdi-variable::before {
@@ -17074,6 +17438,10 @@
   content: "\F56A";
 }
 
+.mdi-view-agenda-outline::before {
+  content: "\F0203";
+}
+
 .mdi-view-array::before {
   content: "\F56B";
 }
@@ -17118,8 +17486,16 @@
   content: "\F570";
 }
 
+.mdi-view-grid-outline::before {
+  content: "\F0204";
+}
+
 .mdi-view-grid-plus::before {
   content: "\FFAA";
+}
+
+.mdi-view-grid-plus-outline::before {
+  content: "\F0205";
 }
 
 .mdi-view-headline::before {
@@ -17346,6 +17722,14 @@
   content: "\F729";
 }
 
+.mdi-washing-machine-alert::before {
+  content: "\F01E7";
+}
+
+.mdi-washing-machine-off::before {
+  content: "\F01E8";
+}
+
 .mdi-watch::before {
   content: "\F589";
 }
@@ -17384,6 +17768,14 @@
 
 .mdi-water-boiler::before {
   content: "\FFAF";
+}
+
+.mdi-water-boiler-alert::before {
+  content: "\F01DE";
+}
+
+.mdi-water-boiler-off::before {
+  content: "\F01DF";
 }
 
 .mdi-water-off::before {
@@ -17726,6 +18118,10 @@
   content: "\F5AE";
 }
 
+.mdi-window-closed-variant::before {
+  content: "\F0206";
+}
+
 .mdi-window-maximize::before {
   content: "\F5AF";
 }
@@ -17736,6 +18132,10 @@
 
 .mdi-window-open::before {
   content: "\F5B1";
+}
+
+.mdi-window-open-variant::before {
+  content: "\F0207";
 }
 
 .mdi-window-restore::before {
